--- a/package.json
+++ b/package.json
@@ -11,7 +11,18 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "next": "15.5.0",
+    "@radix-ui/react-navigation-menu": "1.2.3",
+    "@radix-ui/react-popover": "1.1.4",
+    "@radix-ui/react-separator": "1.1.1",
+    "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.4",
+    "@radix-ui/react-dialog": "1.1.4",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "lucide-react": "^0.454.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -20,6 +31,7 @@
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
+    "tw-animate-css": "1.3.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "@eslint/eslintrc": "^3"
