--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "1.1.1",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query-devtools": "^5.87.1",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -27,6 +30,7 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
