--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-image-gallery": "^1.4.0",
     "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.5.5",
@@ -41,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-image-gallery": "^1.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "husky": "^9.1.7",
